--- a/templates/website/properties.html
+++ b/templates/website/properties.html
@@ -117,7 +117,7 @@
                     <strong><h4>{{ house.description }}</h4></strong>
                   </p>
                   <p class="card-text"><strong>Location:</strong> {{ house.location }}</p>
-                  <p class="card-text"><strong>Price:</strong> <span style="color: red;">${{ house.price }}</span></p>
+                  <p class="card-text"><strong>Price:</strong> <span style="color: red;">Tsh {{ house.price }}</span></p>
                   <p class="card-text"><strong>Status:</strong> {{ house.get_status_display }}</p>
                   <p class="card-text"><strong>Size:</strong> {{ house.size }} sq. m</p>
                   <!-- Button to open the order page -->
