--- a/templates/website/user/component/based2.html
+++ b/templates/website/user/component/based2.html
@@ -59,7 +59,7 @@
         </a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'website:payment_history' %}">
+        {% comment %} <a class="nav-link" href="{% url 'website:payment_history' %}"> {% endcomment %}
           <i class="fas fa-dollar-sign"></i>
           <span>Payment History</span>
         </a>
