--- a/templates/website/payment1.html
+++ b/templates/website/payment1.html
@@ -1,86 +1,34 @@
 {% extends './user/component/based2.html' %}
 {% load static %}
-{% block title %}Payment{% endblock %}
+{% block title %}Payment1{% endblock %}
 
 {% block content %}
 
-    <div class="container">
-        <form method="post" action="{% url 'website:payment1' %}">
-            {% csrf_token %}
-            <h3 class="title">Payment Details</h3>
-
-            <!-- Billing Address Fields -->
-            <div class="row">
-                <div class="col inputBox">
-                    {{ billing_form.full_name.label_tag }}
-                    {{ billing_form.full_name }}
-                </div>
-                <div class="col inputBox">
-                    {{ billing_form.email.label_tag }}
-                    {{ billing_form.email }}
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col inputBox">
-                    {{ billing_form.address.label_tag }}
-                    {{ billing_form.address }}
-                </div>
-                <div class="col inputBox">
-                    {{ billing_form.city.label_tag }}
-                    {{ billing_form.city }}
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col inputBox">
-                    {{ billing_form.state.label_tag }}
-                    {{ billing_form.state }}
-                </div>
-                <div class="col inputBox">
-                    {{ billing_form.zip_code.label_tag }}
-                    {{ billing_form.zip_code }}
-                </div>
-            </div>
-
-            <!-- Payment Fields -->
-            <div class="row">
-                <div class="col inputBox">
-                    {{ payment_form.card_name.label_tag }}
-                    {{ payment_form.card_name }}
-                </div>
-                <div class="col inputBox">
-                    {{ payment_form.card_number.label_tag }}
-                    {{ payment_form.card_number }}
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col inputBox">
-                    {{ payment_form.exp_month.label_tag }}
-                    {{ payment_form.exp_month }}
-                </div>
-                <div class="col inputBox">
-                    {{ payment_form.exp_year.label_tag }}
-                    {{ payment_form.exp_year }}
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col inputBox">
-                    {{ payment_form.cvv.label_tag }}
-                    {{ payment_form.cvv }}
-                </div>
-                <div class="col inputBox">
-                    {{ payment_form.amount.label_tag }}
-                    {{ payment_form.amount }}
-                </div>
-            </div>
-
-            <!-- Submit Button -->
-            <button type="submit" class="submit_btn">Make Payment</button>
-        </form>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <h1>Payment Form</h1>
+    <form action="{{ form.action }}" method="{{ form.method }}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Submit Payment</button>
+    </form>
+    <script>
+        // Example of handling form submission with SweetAlert2
+        document.querySelector('form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            Swal.fire({
+                title: 'Confirm Payment',
+                text: 'Are you sure you want to proceed with the payment?',
+                icon: 'question',
+                showCancelButton: true,
+                confirmButtonText: 'Yes, proceed',
+                cancelButtonText: 'No, cancel'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    event.target.submit();
+                }
+            });
+        });
+    </script>
 </body>
 </html>
 
