--- a/templates/account/admin/base.html
+++ b/templates/account/admin/base.html
@@ -84,7 +84,7 @@
       </li>
       <hr class="sidebar-divider" style="margin: 10px 0px;">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'logout' %}">
+        {% comment %} <a class="nav-link" href="{% url 'logout' %}"> {% endcomment %}
           <i class="fas fa-sign-out-alt fa-2x text-success"></i>
           <span>Logout</span>
         </a>
