--- a/templates/account/admin/apartment.html
+++ b/templates/account/admin/apartment.html
@@ -112,22 +112,31 @@
                                       </div>
 
                                       <!-- Delete Button Triggering Modal -->
-                                      <button class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteApartmentModal{{ apartment.id }}">
-                                        <i class="fas fa-trash-alt"></i>
-                                      </button>
+                                     <!-- Button trigger modal -->
+<button class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteApartmentModal{{ apartment.id }}">
+  <i class="fas fa-trash-alt"></i>
+</button>
 
-                                      <!-- Delete Modal -->
-                                      <div class="modal fade" id="deleteApartmentModal{{ apartment.id }}" tabindex="-1" aria-labelledby="deleteApartmentModalLabel{{ apartment.id }}" aria-hidden="true">
-                                        <div class="modal-dialog">
-                                          <div class="modal-content">
-                                            <div class="modal-header">
-                                              {% comment %} <h5 class="modal-title" id="deleteApartmentModalLabel{{ apartment.id }}">Delete Apartment</h5> {% endcomment %}
-                                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                            </div>
-                                            <div class="modal-body">
-                                              <p>Are you sure you want to delete "{{ apartment.apartment_name }}"?</p>
-                                            </div>
-                                            <div class="modal-footer">
+<!-- Delete Modal -->
+<div class="modal fade" id="deleteApartmentModal{{ apartment.id }}" tabindex="-1" aria-labelledby="deleteApartmentModalLabel{{ apartment.id }}" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="deleteApartmentModalLabel{{ apartment.id }}">Delete Apartment</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <p>Are you sure you want to delete "{{ apartment.apartment_name }}"?</p>
+              <form method="post" action="{% url 'account:delete_apartment' apartment.id %}">
+                  {% csrf_token %}
+                  <button type="submit" class="btn btn-danger">Delete</button>
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              </form>
+          </div>
+      </div>
+  </div>
+</div>
+                               <div class="modal-footer">
                                               {% comment %} <form method="post" action="{% url 'delete_apartment' apartment.id %}">
                                                 {% csrf_token %}
                                                 <button type="submit" class="btn btn-danger">Delete</button>
